--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Raj Shekhar</title>
+    <title>Lingxiao Kong</title>
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="https://rjshkhr.github.io/cleanfolio-minimal" class="link"
+        <a href="https://engineerkong.github.io/lingxiao-kong" class="link"
           >RS.</a
         >
       </h3>
@@ -28,7 +28,19 @@
       <nav class="nav center">
         <ul class="nav__list center">
           <li class="nav__list-item">
+            <a class="link link--nav" href="#publications">Publications</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#presentations">Presentations</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#reviews">Reviews</a>
+          </li>
+          <li class="nav__list-item">
             <a class="link link--nav" href="#projects">Projects</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="link link--nav" href="#scholarships">Scholarships</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#skills">Skills</a>
@@ -55,14 +67,13 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Raj Shekhar.</span></h1>
-        <h2 class="about__role">A Front end Developer.</h2>
+        <h1>Hi, I am <span class="about__name">Lingxiao Kong.</span></h1>
+        <h2 class="about__role">A Research Assistant and PhD Candidate.</h2>
         <p class="about__desc">
-          Consectetur neque sed quam molestiae consectetur nesciunt sit alias
-          Vitae libero perferendis reprehenderit optio veritatis Accusantium at
-          voluptatum cumque temporibus et Explicabo iste porro quis numquam
-          distinctio Repellendus adipisci nam perferendis amet eaque hic
-          Voluptates
+          My current PhD research focuses on "Leveraging RL and LLM for Efficient Multi-Objective Optimization", 
+          incorporating supporting technologies, such as meta-learning, ensemble learning, and knowledge graphs. 
+          With over 3 years of practical experience in Data Science and Artificial Intelligence development, I 
+          am passionate about tackling complex challenges and advancing technology. 
         </p>
 
         <div class="about__contact center">
@@ -71,7 +82,7 @@
           </a>
 
           <a
-            href="https://github.com/rjshkhr"
+            href="https://github.com/engineerkong"
             aria-label="github"
             class="link link--icon"
           >
@@ -79,7 +90,7 @@
           </a>
 
           <a
-            href="https://linkedin.com/in/rjshkhr"
+            href="www.linkedin.com/in/lingxiao-kong"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -88,7 +99,151 @@
         </div>
       </div>
 
-      <!-- Projects -->
+      <!-- Publications -->
+      <section id="publications" class="section publications">
+        <h2 class="section__title">Publications</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Project 1</h3>
+            <p class="project__description">
+              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
+              sapiente debitis labore sed ipsam Mollitia repellat illum quod
+              unde beatae Quis
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">SASS</li>
+              <li class="project__stack-item">TypeScript</li>
+              <li class="project__stack-item">React</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <!-- Presentations -->
+      <section id="presentations" class="section presentations">
+        <h2 class="section__title">Presentations</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Project 1</h3>
+            <p class="project__description">
+              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
+              sapiente debitis labore sed ipsam Mollitia repellat illum quod
+              unde beatae Quis
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">SASS</li>
+              <li class="project__stack-item">TypeScript</li>
+              <li class="project__stack-item">React</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+  <!-- Reviews -->
+      <section id="reviews" class="section reviews">
+        <h2 class="section__title">Reviews</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Project 1</h3>
+            <p class="project__description">
+              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
+              sapiente debitis labore sed ipsam Mollitia repellat illum quod
+              unde beatae Quis
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">SASS</li>
+              <li class="project__stack-item">TypeScript</li>
+              <li class="project__stack-item">React</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+  <!-- Scholarships -->
+      <section id="scholarships" class="section scholarships">
+        <h2 class="section__title">Scholarships</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>Project 1</h3>
+            <p class="project__description">
+              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
+              sapiente debitis labore sed ipsam Mollitia repellat illum quod
+              unde beatae Quis
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">SASS</li>
+              <li class="project__stack-item">TypeScript</li>
+              <li class="project__stack-item">React</li>
+            </ul>
+
+            <a
+              href="https://github.com"
+              aria-label="source code"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <a
+              href="https://example.com"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+  <!-- Projects -->
       <section id="projects" class="section projects">
         <h2 class="section__title">Projects</h2>
 
@@ -121,67 +276,8 @@
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
-
-          <div class="project">
-            <h3>Project 2</h3>
-            <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
-
-          <div class="project">
-            <h3>Project 3</h3>
-            <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
-          </div>
         </div>
       </section>
-
       <!-- Skills -->
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
@@ -204,7 +300,7 @@
       <!-- Contact -->
       <section class="section contact center" id="contact">
         <h2 class="section__title">Contact</h2>
-        <a href="mailto:rjshekhar.official@gmail.com">
+        <a href="mailto:lingxiao.kong@fit.fraunhofer.de">
           <span class="btn btn--outline">Email me</span>
         </a>
       </section>
@@ -212,10 +308,10 @@
 
     <footer class="footer">
       <a
-        href="https://github.com/rjshkhr/cleanfolio-minimal"
+        href="https://github.com/engineerkong/lingxiao-kong"
         class="link footer__link"
       >
-        Created By Raj Shekhar
+        Created By Lingxiao Kong
       </a>
     </footer>
 
