--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header center">
       <h3>
         <a href="https://engineerkong.github.io/lingxiao-kong" class="link"
-          >RS.</a
+          >LK.</a
         >
       </h3>
 
@@ -31,16 +31,13 @@
             <a class="link link--nav" href="#publications">Publications</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="#presentations">Presentations</a>
-          </li>
-          <li class="nav__list-item">
-            <a class="link link--nav" href="#reviews">Reviews</a>
+            <a class="link link--nav" href="#contributions">Contributions</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#projects">Projects</a>
           </li>
           <li class="nav__list-item">
-            <a class="link link--nav" href="#scholarships">Scholarships</a>
+            <a class="link link--nav" href="#activities">Activities</a>
           </li>
           <li class="nav__list-item">
             <a class="link link--nav" href="#skills">Skills</a>
@@ -67,8 +64,8 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Lingxiao Kong.</span></h1>
-        <h2 class="about__role">A Research Assistant and PhD Candidate.</h2>
+        <h1>Hi, I am <span class="about__name">Lingxiao Kong</span></h1>
+        <h2 class="about__role">Research Assistant / PhD Candidate</h2>
         <p class="about__desc">
           My current PhD research focuses on "Leveraging RL and LLM for Efficient Multi-Objective Optimization", 
           incorporating supporting technologies, such as meta-learning, ensemble learning, and knowledge graphs. 
@@ -77,9 +74,9 @@
         </p>
 
         <div class="about__contact center">
-          <a href="https://example.com">
+<!--           <a href="https://example.com">
             <span class="btn btn--outline">Resume</span>
-          </a>
+          </a> -->
 
           <a
             href="https://github.com/engineerkong"
@@ -90,7 +87,7 @@
           </a>
 
           <a
-            href="www.linkedin.com/in/lingxiao-kong"
+            href="https://linkedin.com/in/lingxiao-kong"
             aria-label="linkedin"
             class="link link--icon"
           >
@@ -105,27 +102,76 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: 
+              The ARGUS Approach</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              We describe a systematic data processing pipeline encompassing standardization, 
+              enrichment, integration, visualization, ingestion, and publication strategies. 
+              The framework transforms raw, disparate datasets into standardized formats compliant 
+              with FAIR principles. (Accepted by IEEE-CH 2025 ARGUS workshop) 
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
+              <li class="project__stack-item">data processing</li>
+              <li class="project__stack-item">LLM querying</li>
+              <li class="project__stack-item">cultural heritage data</li>
+            </ul>
+            </a>
+            <a
+              href="https://www.ieee-ch.org/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+          <div class="project">
+            <h3>EMORL: Ensemble Multi-Objective Reinforcement Learning for Efficient and 
+              Flexible LLM Fine-Tuning</h3>
+            <p class="project__description">
+              Leveraging ensemble learning principles, we introduce an Ensemble Multi-Objective 
+              RL (EMORL) framework that fine-tunes multiple models with individual objectives 
+              while optimizing their aggregation after the training to improve efficiency and 
+              flexibility. (Submitted to SIGDIAL 2025 main track and preprinted)
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">multi-objective optimization</li>
+              <li class="project__stack-item">Reinforcement Learning</li>
+              <li class="project__stack-item">Large Language Model</li>
             </ul>
 
             <a
-              href="https://github.com"
+              href="https://github.com/engineerkong/EMORL"
               aria-label="source code"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://arxiv.org/abs/2505.02579"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+          <div class="project">
+            <h3>Understanding Open Source Large Language Models: An Exploratory Study</h3>
+            <p class="project__description">
+              This study investigates Open Source Large Language Models (OSLLMs), exploring their 
+              characteristics, openness, and community interactions. Our research aims to define 
+              OSLLMs (license, openness, community engagement). Utilizing data from the Hugging Face 
+              platform, we examine the popularity metrics, license distribution, artefact accessibilities 
+              and community engagement of LLM projects. (Accepted by FLLM 2024 main track)
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">Data Analysis</li>
+              <li class="project__stack-item">Open Source Characteristics</li>
+              <li class="project__stack-item">Large Language Model</li>
+            </ul>
+
+            </a>
+            <a
+              href="https://ieeexplore.ieee.org/abstract/document/10852438"
               aria-label="live preview"
               class="link link--icon"
             >
@@ -135,117 +181,102 @@
         </div>
       </section>
 
-      <!-- Presentations -->
-      <section id="presentations" class="section presentations">
-        <h2 class="section__title">Presentations</h2>
+      <!-- Contributions -->
+      <section id="contributions" class="section contributions">
+        <h2 class="section__title">Contributions</h2>
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>WILLEY-VCH Journal Co-review</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
             </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-
             <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
+              href="https://www.wiley-vch.de/en"
               aria-label="live preview"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
-        </div>
-      </section>
-
-  <!-- Reviews -->
-      <section id="reviews" class="section reviews">
-        <h2 class="section__title">Reviews</h2>
-
-        <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>CAA 2025 Abstract</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
+              Future-Proofing Heritage with ARGUS: A Multimodal Digital Twin Approach for Sustainable Preservation.
             </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-
             <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
+              href="https://2025.caaconference.org/"
               aria-label="live preview"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
-        </div>
-      </section>
 
-  <!-- Scholarships -->
-      <section id="scholarships" class="section scholarships">
-        <h2 class="section__title">Scholarships</h2>
-
-        <div class="projects__grid">
           <div class="project">
-            <h3>Project 1</h3>
+            <h3>FLLM 2024 Review</h3>
             <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
             </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
-
             <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
+              href="https://fllm-conference.org/2024/"
               aria-label="live preview"
               class="link link--icon"
             >
               <i aria-hidden="true" class="fas fa-external-link-alt"></i>
             </a>
           </div>
+          
+          <div class="project">
+            <h3>KONKIS 2024 Abstract</h3>
+            <p class="project__description">
+              We present work on RL fine-tuning for improving chatbots by incorporating AI feedback scores. Our approach 
+              enhances emotional support systems to predict suitable CBT techniques, develop treatment plans, and generate 
+              corresponding therapeutic responses.
+            </p>
+            <a
+              href="https://events.gwdg.de/event/615/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+          
         </div>
       </section>
 
   <!-- Projects -->
       <section id="projects" class="section projects">
         <h2 class="section__title">Projects</h2>
+
+        <div class="projects__grid">
+          <div class="project">
+            <h3>ARGUS</h3>
+            <p class="project__description">
+              We manage data collection and processing for existing and real-time 
+              data while leading the trustworthy AI solutions Work Package. We 
+              support AI strategies with standardized, AI-ready datasets. The project 
+              implements sensor data and AI solutions to monitor and preserve cultural 
+              heritage sites across the EU.
+            </p>
+            <ul class="project__stack">
+              <li class="project__stack-item">data processing</li>
+              <li class="project__stack-item">AI solutions</li>
+              <li class="project__stack-item">cultural heritage data</li>
+            </ul>
+            <a
+              href="https://www.argus-project.eu/"
+              aria-label="live preview"
+              class="link link--icon"
+            >
+              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+  <!-- Activities -->
+      <section id="activities" class="section activities">
+        <h2 class="section__title">Activities</h2>
 
         <div class="projects__grid">
           <div class="project">
