--- a/index.html
+++ b/index.html
@@ -291,14 +291,11 @@
                 <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: 
                   The ARGUS Approach</h3>
                 <div class="project__description">
-                  <div class="description-content collapsed" id="desc1">
                   We describe a systematic data processing pipeline encompassing standardization, 
                   enrichment, integration, visualization, ingestion, and publication strategies. 
                   The framework transforms raw, disparate datasets into standardized formats compliant 
                   with FAIR principles.
-                  </div>
-                  <button class="read-more-btn" onclick="toggleDescription('desc1', this)">Read more</button>
-                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by IEEE-CH 2025 ARGUS workshop)</p>
+                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by IEEE-CH [June 2025])</p>
                 </div>
                 <ul class="project__stack">
                   <li class="project__stack-item">Data Processing</li>
@@ -316,14 +313,11 @@
                 <h3>EMORL: Ensemble Multi-Objective Reinforcement Learning for Efficient and 
                   Flexible LLM Fine-Tuning</h3>
                 <div class="project__description">
-                  <div class="description-content collapsed" id="desc2">
                   Leveraging ensemble learning principles, we introduce an Ensemble Multi-Objective 
                   RL (EMORL) framework that fine-tunes multiple models with individual objectives 
                   while optimizing their aggregation after the training to improve efficiency and 
                   flexibility.
-                  </div>
-                  <button class="read-more-btn" onclick="toggleDescription('desc2', this)">Read more</button>
-                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Submitted to SIGDIAL 2025 main track and preprinted)</p>
+                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Submitted to SIGDIAL [May 2025])</p>
                 </div>
                 <ul class="project__stack">
                   <li class="project__stack-item">Multi-Objective Optimization</li>
@@ -340,15 +334,12 @@
               <div class="project">
                 <h3>Understanding Open Source Large Language Models: An Exploratory Study</h3>
                 <div class="project__description">
-                  <div class="description-content collapsed" id="desc3">
                   This study investigates Open Source Large Language Models (OSLLMs), exploring their 
                   characteristics, openness, and community interactions. Our research aims to define 
                   OSLLMs (license, openness, community engagement). Utilizing data from the Hugging Face 
                   platform, we examine the popularity metrics, license distribution, artefact accessibilities 
                   and community engagement of LLM projects.
-                  </div>
-                  <button class="read-more-btn" onclick="toggleDescription('desc3', this)">Read more</button>
-                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by FLLM 2024 main track)</p>
+                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by FLLM [October 2024])</p>
                 </div>
                 <ul class="project__stack">
                   <li class="project__stack-item">Data Processing</li>
