--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
             color: #3b82f6;
         }
 
+        /* Projects and Activities并排布局 */
+        .projects-activities-container {
+            display: flex;
+            gap: 40px;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .half-width {
+            flex: 1;
+            min-width: 0; /* 防止flex item过宽 */
+        }
+
+        .half-width .section__title {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        /* 响应式设计 - 在小屏幕上垂直排列 */
+        @media (max-width: 768px) {
+            .projects-activities-container {
+                flex-direction: column;
+                gap: 20px;
+            }
+        }
+
         /* 导航按钮 */
         .nav-btn {
             position: absolute;
@@ -434,71 +461,74 @@
         </div>
       </section>
 
-  <!-- Projects -->
-      <section id="projects" class="section projects">
-        <h2 class="section__title">Projects</h2>
+  <!-- Projects and Activities Container -->
+      <div class="projects-activities-container">
+        <!-- Projects -->
+        <section id="projects" class="section projects half-width">
+          <h2 class="section__title">Projects</h2>
 
-        <div class="projects__grid">
-          <div class="project">
-            <h3>ARGUS</h3>
-            <p class="project__description">
-              We manage data collection and processing for existing and real-time 
-              data while leading the trustworthy AI solutions Work Package. We 
-              support AI strategies with standardized, AI-ready datasets. The project 
-              implements sensor data and AI solutions to monitor and preserve cultural 
-              heritage sites across the EU.
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">data processing</li>
-              <li class="project__stack-item">AI solutions</li>
-              <li class="project__stack-item">cultural heritage data</li>
-            </ul>
-            <a
-              href="https://www.argus-project.eu/"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+          <div class="projects__grid">
+            <div class="project">
+              <h3>ARGUS</h3>
+              <p class="project__description">
+                We manage data collection and processing for existing and real-time 
+                data while leading the trustworthy AI solutions Work Package. We 
+                support AI strategies with standardized, AI-ready datasets. The project 
+                implements sensor data and AI solutions to monitor and preserve cultural 
+                heritage sites across the EU.
+              </p>
+              <ul class="project__stack">
+                <li class="project__stack-item">data processing</li>
+                <li class="project__stack-item">AI solutions</li>
+                <li class="project__stack-item">cultural heritage data</li>
+              </ul>
+              <a
+                href="https://www.argus-project.eu/"
+                aria-label="live preview"
+                class="link link--icon"
+              >
+                <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+              </a>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-  <!-- Activities -->
-      <section id="activities" class="section activities">
-        <h2 class="section__title">Activities</h2>
+        <!-- Activities -->
+        <section id="activities" class="section activities half-width">
+          <h2 class="section__title">Activities</h2>
 
-        <div class="projects__grid">
-          <div class="project">
-            <h3>Project 1</h3>
-            <p class="project__description">
-              Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-              sapiente debitis labore sed ipsam Mollitia repellat illum quod
-              unde beatae Quis
-            </p>
-            <ul class="project__stack">
-              <li class="project__stack-item">SASS</li>
-              <li class="project__stack-item">TypeScript</li>
-              <li class="project__stack-item">React</li>
-            </ul>
+          <div class="projects__grid">
+            <div class="project">
+              <h3>Project 1</h3>
+              <p class="project__description">
+                Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
+                sapiente debitis labore sed ipsam Mollitia repellat illum quod
+                unde beatae Quis
+              </p>
+              <ul class="project__stack">
+                <li class="project__stack-item">SASS</li>
+                <li class="project__stack-item">TypeScript</li>
+                <li class="project__stack-item">React</li>
+              </ul>
 
-            <a
-              href="https://github.com"
-              aria-label="source code"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fab fa-github"></i>
-            </a>
-            <a
-              href="https://example.com"
-              aria-label="live preview"
-              class="link link--icon"
-            >
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+              <a
+                href="https://github.com"
+                aria-label="source code"
+                class="link link--icon"
+              >
+                <i aria-hidden="true" class="fab fa-github"></i>
+              </a>
+              <a
+                href="https://example.com"
+                aria-label="live preview"
+                class="link link--icon"
+              >
+                <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+              </a>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
+      </div>
       <!-- Skills -->
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
