--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
       <section id="publications" class="section publications">
         <h2 class="section__title">Publications</h2>
 
-<!--         <div class="projects-container">
-          <div class="projects-slider">
+        <div class="projects-container">
+<!--           <div class="projects-slider">
             <button class="nav-btn prev" onclick="slideProjects(-1)">
                 <i class="fas fa-chevron-left"></i>
             </button>  
@@ -415,9 +415,9 @@
                     </a>
                   </div>
                 </div>
-<!--             </div>
+              </div>
             
-            <button class="nav-btn next" onclick="slideProjects(1)">
+<!--             <button class="nav-btn next" onclick="slideProjects(1)">
                 <i class="fas fa-chevron-right"></i>
             </button>
           </div>
@@ -430,8 +430,8 @@
       <section id="contributions" class="section contributions">
         <h2 class="section__title">Contributions</h2>
 
-<!--         <div class="projects-container">
-          <div class="projects-slider">
+        <div class="projects-container">
+<!--           <div class="projects-slider">
             <button class="nav-btn prev" onclick="slideProjects(-1)">
                 <i class="fas fa-chevron-left"></i>
             </button>
@@ -483,9 +483,9 @@
                   </a>
                 </div>
               </div>
-<!--             </div>
+            </div>
           
-            <button class="nav-btn next" onclick="slideProjects(1)">
+<!--             <button class="nav-btn next" onclick="slideProjects(1)">
                 <i class="fas fa-chevron-right"></i>
             </button>
           </div>
