--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <section id="publications" class="section publications">
         <h2 class="section__title">Publications</h2>
 
-        <div class="projects-container">
+        <div class="projects_grid">
 <!--           <div class="projects-slider">
             <button class="nav-btn prev" onclick="slideProjects(-1)">
                 <i class="fas fa-chevron-left"></i>
@@ -430,7 +430,7 @@
       <section id="contributions" class="section contributions">
         <h2 class="section__title">Contributions</h2>
 
-        <div class="projects-container">
+        <div class="projects_grid">
 <!--           <div class="projects-slider">
             <button class="nav-btn prev" onclick="slideProjects(-1)">
                 <i class="fas fa-chevron-left"></i>
@@ -483,7 +483,7 @@
                   </a>
                 </div>
               </div>
-            </div>
+        </div>
           
 <!--             <button class="nav-btn next" onclick="slideProjects(1)">
                 <i class="fas fa-chevron-right"></i>
