--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
         .projects-container {
-            max-width: 1200px;
+            max-width: 1500px;
             margin: 0 auto;
             padding: 20px;
             overflow: hidden;
@@ -61,20 +61,6 @@
             border: 1px solid #e5e7eb;
             transition: transform 0.2s ease, box-shadow 0.2s ease;
         }
-
-        .project3 {
-            flex: 0 0 350px; /* 固定宽度 */
-            height: 250px; /* 增加高度以适应内容 */
-            background: #fff;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 24px;
-            display: flex;
-            flex-direction: column;
-            position: relative;
-            border: 1px solid #e5e7eb;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
       
         .project:hover {
             transform: translateY(-4px);
@@ -88,7 +74,7 @@
             color: #1f2937;
             line-height: 1.4;
             min-height: 50px; /* 确保标题有最小高度 */
-            max-height: 75px; /* 限制标题最大高度 */
+            max-height: 100px; /* 限制标题最大高度 */
             overflow: hidden;
             display: -webkit-box;
             -webkit-line-clamp: 3;
@@ -156,7 +142,7 @@
         .projects-activities-container {
             display: flex;
             gap: 40px;
-            max-width: 1200px;
+            max-width: 1500px;
             margin: 0 auto;
             padding: 0 20px;
         }
@@ -346,7 +332,7 @@
       <section id="publications" class="section publications">
         <h2 class="section__title">Publications</h2>
 
-        <div class="projects__grid">
+        <div class="projects-container">
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
@@ -415,7 +401,7 @@
       <section id="contributions" class="section contributions">
         <h2 class="section__title">Contributions</h2>
         
-        <div class="projects__grid">
+        <div class="projects-container">
           <div class="project2">
             <h3>WILLEY-VCH Journal Co-review</h3>
             <p class="project__description">
