--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
       <section id="publications" class="section publications">
         <h2 class="section__title">Publications</h2>
 
-        <div class="projects-container">
+        <div class="projects__grid">
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
@@ -401,7 +401,7 @@
       <section id="contributions" class="section contributions">
         <h2 class="section__title">Contributions</h2>
         
-        <div class="projects-container">
+        <div class="projects__grid">
           <div class="project2">
             <h3>WILLEY-VCH Journal Co-review</h3>
             <p class="project__description">
