--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles.css" />
     <style>
         .projects-container {
-            max-width: 1300px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
             overflow: hidden;
@@ -142,7 +142,7 @@
         .projects-activities-container {
             display: flex;
             gap: 40px;
-            max-width: 1300px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 0 20px;
         }
@@ -332,7 +332,7 @@
       <section id="publications" class="section publications">
         <h2 class="section__title">Publications</h2>
 
-        <div class="projects__grid">
+        <div class="projects-container">
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
@@ -401,7 +401,7 @@
       <section id="contributions" class="section contributions">
         <h2 class="section__title">Contributions</h2>
         
-        <div class="projects__grid">
+        <div class="projects-container">
           <div class="project2">
             <h3>WILLEY-VCH Journal Co-review</h3>
             <p class="project__description">
