--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
       </section>
 
   <!-- Projects and Activities Container -->
-      <div class="projects-activities-container">
+      <div class="projects__grid">
         <!-- Projects -->
         <section id="projects" class="section projects half-width">
           <h2 class="section__title">Projects</h2>
