--- a/index.html
+++ b/index.html
@@ -483,14 +483,12 @@
 
           <div class="projects__grid">
             <div class="project2">
-              <h3>Project 1</h3>
+              <h3>ISWS 2025 Summer School</h3>
               <p class="project__description">
-                Ipsum accusamus ea excepturi aliquid eligendi amet. Explicabo
-                sapiente debitis labore sed ipsam Mollitia repellat illum quod
-                unde beatae Quis
+                International Semantic Web Research Summer School with the topic "Knowledge graphs for reliable AI". ISWS is a full immersion, super intensive one-week experience including lectures and keynotes from outstanding speakers, a “learning by doing” teamwork program on open research problems, under the guidance of the best scientists in the field, with whom we co-author a white paper of high potential impact.
               </p>
               <div class="project-links">
-                <a href="https://example.com" aria-label="live preview" class="link link--icon">
+                <a href="https://2025.semanticwebschool.org/" aria-label="live preview" class="link link--icon">
                   <i aria-hidden="true" class="fas fa-external-link-alt"></i>
                 </a>
               </div>
@@ -502,18 +500,18 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">SCSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">TypeScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Redux</li>
+          <li class="skills__list-item btn btn--plain">Python</li>
+          <li class="skills__list-item btn btn--plain">C++</li>
+          <li class="skills__list-item btn btn--plain">Pytorch</li>
+          <li class="skills__list-item btn btn--plain">Tensorflow</li>
+          <li class="skills__list-item btn btn--plain">Transformers</li>
+          <li class="skills__list-item btn btn--plain">Stable-Baselines3</li>
+          <li class="skills__list-item btn btn--plain">Gymnasium</li>
+          <li class="skills__list-item btn btn--plain">Cypher</li>
+          <li class="skills__list-item btn btn--plain">Pandas</li>
+          <li class="skills__list-item btn btn--plain">QGIS</li>
+          <li class="skills__list-item btn btn--plain">SQL</li>
           <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">Material UI</li>
-          <li class="skills__list-item btn btn--plain">Jest</li>
-          <li class="skills__list-item btn btn--plain">Enzyme</li>
-          <li class="skills__list-item btn btn--plain">CI/CD</li>
         </ul>
       </section>
 
