--- a/index.html
+++ b/index.html
@@ -336,13 +336,16 @@
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
-                  We describe a systematic data processing pipeline encompassing standardization, enrichment, integration, visualization, ingestion, and publication strategies. The framework transforms raw, disparate datasets into standardized formats compliant with FAIR principles. This comprehensive approach ensures data quality, accessibility, and long-term preservation for cultural heritage research and applications.
-                  <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by IEEE-CH 2025 ARGUS workshop)</p>
+                (Accepted by IEEE-CH 2025 ARGUS workshop) We describe a systematic data processing pipeline 
+                encompassing standardization, enrichment, integration, visualization, ingestion, and publication 
+                strategies. The framework transforms raw, disparate datasets into standardized formats compliant 
+                with FAIR principles. This comprehensive approach ensures data quality, accessibility, and long-term 
+                preservation for cultural heritage research and applications.
               </div>
               <ul class="project__stack">
-                  <li class="project__stack-item">data processing</li>
-                  <li class="project__stack-item">LLM querying</li>
-                  <li class="project__stack-item">cultural heritage data</li>
+                  <li class="project__stack-item">Data Processing</li>
+                  <li class="project__stack-item">LLM Querying</li>
+                  <li class="project__stack-item">Cultural Heritage Data</li>
               </ul>
               <div class="project-links">
                   <a href="https://www.ieee-ch.org/" aria-label="live preview" class="link">
@@ -355,11 +358,10 @@
             <h3>EMORL: Ensemble Multi-Objective Reinforcement Learning for Efficient and 
               Flexible LLM Fine-Tuning</h3>
             <div class="project__description">
-              Leveraging ensemble learning principles, we introduce an Ensemble Multi-Objective 
-              RL (EMORL) framework that fine-tunes multiple models with individual objectives 
-              while optimizing their aggregation after the training to improve efficiency and 
-              flexibility.
-              <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Submitted to SIGDIAL [May 2025])</p>
+              (Submitted to SIGDIAL [May 2025]) Leveraging ensemble learning principles, we introduce 
+              an Ensemble Multi-Objective RL (EMORL) framework that fine-tunes multiple models with 
+              individual objectives while optimizing their aggregation after the training to improve 
+              efficiency and flexibility.
             </div>
             <ul class="project__stack">
               <li class="project__stack-item">Multi-Objective Optimization</li>
@@ -376,12 +378,11 @@
           <div class="project">
             <h3>Understanding Open Source Large Language Models: An Exploratory Study</h3>
             <div class="project__description">
-              This study investigates Open Source Large Language Models (OSLLMs), exploring their 
-              characteristics, openness, and community interactions. Our research aims to define 
+              (Accepted by FLLM [October 2024]) This study investigates Open Source Large Language Models (OSLLMs), 
+              exploring their characteristics, openness, and community interactions. Our research aims to define 
               OSLLMs (license, openness, community engagement). Utilizing data from the Hugging Face 
               platform, we examine the popularity metrics, license distribution, artefact accessibilities 
               and community engagement of LLM projects.
-              <p style="font-size: 12px; color: #9ca3af; margin-top: 8px;">(Accepted by FLLM [October 2024])</p>
             </div>
             <ul class="project__stack">
               <li class="project__stack-item">Data Processing</li>
