--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
-                (Accepted by IEEE-CH 2025 ARGUS workshop) We describe a systematic data processing pipeline 
+                (Accepted by IEEE-CH [June 2025]) We describe a systematic data processing pipeline 
                 encompassing standardization, enrichment, integration, visualization, ingestion, and publication 
                 strategies. The framework transforms raw, disparate datasets into standardized formats compliant 
                 with FAIR principles. This comprehensive approach ensures data quality, accessibility, and long-term 
