--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
           <div class="project">
               <h3>A Unified Framework for Cultural Heritage Data Historicity and Migration: The ARGUS Approach</h3>
               <div class="project__description">
-                (Accepted by IEEE-CH [June 2025]) We describe a systematic data processing pipeline 
-                encompassing standardization, enrichment, integration, visualization, ingestion, and publication 
-                strategies. The framework transforms raw, disparate datasets into standardized formats compliant 
-                with FAIR principles. This comprehensive approach ensures data quality, accessibility, and long-term 
-                preservation for cultural heritage research and applications.
+                (Accepted by IEEE-CH [June 2025]) <br> 
+                We describe a systematic data processing pipeline encompassing standardization, enrichment, integration, 
+                visualization, ingestion, and publication strategies. The framework transforms raw, disparate datasets 
+                into standardized formats compliant with FAIR principles. This comprehensive approach ensures data quality, 
+                accessibility, and long-term preservation for cultural heritage research and applications.
               </div>
               <ul class="project__stack">
                   <li class="project__stack-item">Data Processing</li>
@@ -358,10 +358,10 @@
             <h3>EMORL: Ensemble Multi-Objective Reinforcement Learning for Efficient and 
               Flexible LLM Fine-Tuning</h3>
             <div class="project__description">
-              (Submitted to SIGDIAL [May 2025]) Leveraging ensemble learning principles, we introduce 
-              an Ensemble Multi-Objective RL (EMORL) framework that fine-tunes multiple models with 
-              individual objectives while optimizing their aggregation after the training to improve 
-              efficiency and flexibility.
+              (Submitted to SIGDIAL [May 2025]) <br>
+              Leveraging ensemble learning principles, we introduce an Ensemble Multi-Objective RL (EMORL) 
+              framework that fine-tunes multiple models with individual objectives while optimizing their 
+              aggregation after the training to improve efficiency and flexibility.
             </div>
             <ul class="project__stack">
               <li class="project__stack-item">Multi-Objective Optimization</li>
@@ -378,7 +378,7 @@
           <div class="project">
             <h3>Understanding Open Source Large Language Models: An Exploratory Study</h3>
             <div class="project__description">
-              (Accepted by FLLM [October 2024]) This study investigates Open Source Large Language Models (OSLLMs), 
+              (Accepted by FLLM [October 2024]) <br> This study investigates Open Source Large Language Models (OSLLMs), 
               exploring their characteristics, openness, and community interactions. Our research aims to define 
               OSLLMs (license, openness, community engagement). Utilizing data from the Hugging Face 
               platform, we examine the popularity metrics, license distribution, artefact accessibilities 
