--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <h3>EMORL: Ensemble Multi-Objective Reinforcement Learning for Efficient and 
               Flexible LLM Fine-Tuning</h3>
             <div class="project__description">
-              (Submitted to SIGDIAL [May 2025]) <br>
+              (Accepted to SIGDIAL [June 2025]) <br>
               Leveraging ensemble learning principles, we introduce an Ensemble Multi-Objective RL (EMORL) 
               framework that fine-tunes multiple models with individual objectives while optimizing their 
               aggregation after the training to improve efficiency and flexibility.
